task-resources/upg-loadme-manifests/upg-loadme.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: upg-loadme
  namespace: demo
  labels:
    app: upg-loadme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upg-loadme
  template:
    metadata:
      name: upg-loadme
      labels:
        app: upg-loadme
    spec:
      containers:
        - name: upg-loadme
          # update image id (manual or via jenkins)
          image: "007869898307.dkr.ecr.us-east-1.amazonaws.com/dev-pyae-c7-capstone-eks-ecr:latest"
          # limiting cpu & mem usage of a pod
          ports:
            - name: http
              containerPort: 8081
          resources:
            requests:
              cpu: 800m
              memory: 400Mi
            limits:
              cpu: 1000m
              memory: 400Mi
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      # add tolerations to restrict running on selected nodes

---
kind: Service
apiVersion: v1
metadata:
  name: upg-loadme
  namespace: demo
spec:
  selector:
    app: upg-loadme
  type: NodePort
  ports:
    - name: app-port
      protocol: TCP
      port: 80
      targetPort: 8081
